[project]
name = "openx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.1",
    "sqlalchemy>=2.0.46",
    "bcrypt>=4.2.0",
    "slowapi>=0.1.9",
    "cryptography>=42.0.0",
    "bleach>=6.1.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
