[project]
name = "openx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.1",
    "sqlalchemy>=2.0.46",
    "bcrypt>=4.2.0",
    "slowapi>=0.1.9",
    "cryptography>=42.0.0",
    "bleach>=6.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.30.0",
    "aiosqlite>=0.20.0",
    "filetype>=1.2.0",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"
